2012-05-25 Santiago Munín <burning1@gmail.com>

	* src/pandroid_event_viewer/pandorafms/Options.java: Added the option to show or hide advanced options (filter view).
	* res/layout/options.xml: Checkbox to select show or hide advanced options.
	* res/layout/main.xml: Show/hide advanced options (layout) and tag filter.
	* res/values/strings.xml: Added new entries.
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java,
	  src/pandroid_event_viewer/pandorafms/PandroidEventviewerService.java: Adapted event parsing to Pandora FMS v5 and added the tag filter.
	* src/pandroid_event_viewer/pandorafms/Main.java: Now, removes advanced filter options if "hide advanced options" is selected in options view.

2012-05-23 Santiago Munín <burning1@gmail.com>

	* Core.java: Added a generic function which will serialize given params in order to send an API request.
	* PandroidEventviewerActivity.java, PandroidEventviewerService: Refactorized the serialization of parameters (now, they call Core.java function). 

2012-05-22 Santiago Munín <burning1@gmail.com>

	* PandroidEventviewerService.java, PandroidEventviewerActivity.java: Added group filter.
	* res/layout/main.xml: Enabled group spinner.

2012-05-21 Santiago Munín  <burning1@gmail.com>

	* EventList.java, PopupValidationEvent.java: Removed references to Core as an object.
	
2012-05-19 Santiago Munín <burning1@gmail.com>

	* AlarmReceiver.java: Removed. Now it's the service which will retrieve data.
	* Core.java: The method of setting periodically data retrieval was changed. 
				 Now, the AlarmManager will launch the Service instead of BroadcastReceiver.
	* PandroidEventviewerService.java: Every time it receives a call from the AlarmManager, will search for new events.
	* Most of files have little changes to adapt the new data retrieval subsystem.
	
2012-05-17 Santiago Munín  <burning1@gmail.com>
	
	* Core.java: Changed methods to static. 
	
	* Main.java,
	  PandroidEventviewerService.java,